# floui-rs-template

./: Cargo.toml  README.md
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/android/: MainActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore
ios/ios/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/ios.xcodeproj/: project.pbxproj
ios/ios.xcodeproj/project.xcworkspace/xcuserdata/mohammedalyousef.xcuserdatad/: UserInterfaceState.xcuserstate
src/: lib.rs
